# photo-rename

./: .gitignore  LICENSE  pyproject.toml
photo_rename/: __main__.py  config.py  filing.py  model.py  shared.py  view.py  vm.py
resources/: main_window.ui  style.qss
